kubernetes/StatefulSet.yml
# apiVersion: apps/v1
# kind: StatefulSet
# metadata:
#   name: mongo
# spec:
#   replicas: 3
#   serviceName: "mongo"
#   selector:
#     matchLabels:
#       app: mongo
#   template:
#     metadata:
#       labels:
#         app: mongo
#     spec:
#       containers:
#         - name: mongodb
#           image: mongo
#           ports:
#             - containerPort: 27017
#           volumeMounts:
#             - name: mongo-persistent-storage
#               mountPath: /data/db
#           env:
#             - name: MONGO_INITDB_ROOT_USERNAME
#               valueFrom:
#                 secretKeyRef:
#                   name: mongo-auth
#                   key: username
#             - name: MONGO_INITDB_ROOT_PASSWORD
#               valueFrom:
#                 secretKeyRef:
#                   name: mongo-auth
#                   key: password
#           args:
#             - mongod
#             - --config=/etc/mongo/mongod.conf
#             - --bind_ip_all
#           # securityContext:
#           #   runAsUser: 1000
#           #   runAsGroup: 1000
#           #   fsGroup: 1000
#       volumes:
#         - name: mongo-persistent-storage
#           persistentVolumeClaim:
#             claimName: mongo-pvc
#   volumeClaimTemplates:
#     - metadata:
#         name: mongo-pvc
#       spec:
#         accessModes:
#           - ReadWriteOnce
#         resources:
#           requests:
#             storage: 10Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
